Fix month between button overlap on mobile screens

--- a/app/static/css/styles.css
+++ b/app/static/css/styles.css
@@ -6156,6 +6156,10 @@ for selection in timeline_search.js */
     width: 80%;
   }
 
+  .month-between {
+    margin-bottom: 100px;
+  }
+
   .epoch-between {
     margin-bottom: 70px;
   }
